# hiqlab

./: Makefile  README  README_CLUSTER  aclocal.m4  config.h  config.h.in  configure  configure.in  init.lua  init.lua.in  init.m  initp.m  make.inc  make.inc.cross  make.inc.in  myconf-laptop
autom4te.cache/: output.0  traces.0
configure_sample/: hybrid.txt  petsc_gnu64.txt  pgi_compilers.txt  trilinos.txt
models/: circuit.lua  common.lua  components.lua  materials.lua
models/dxfiles/: plotcycle2d.cfg  plotcycle2d.net  plotcycle3d.cfg  plotcycle3d.net  plotcycle3d_new.cfg  plotcycle3d_new.net  plotmesh2d.cfg  plotmesh2d.net  plotmesh3d.cfg  plotmesh3d.net
models/tutorial/: run_all.m
models/util/: diagnose_pml1d.m  estimate_pml.m  get_dim_param.m  pml_auto.m
sandbox/: pml2d.lua  test_marray.lua  test_marray.m  test_taxis.lua  test_taxis.m
sandbox/notes/: #notes-element.txt#  convergence.txt  depend.txt  plans.txt  tasks.txt
sandbox/parallel/: Makefile  make.inc.in
sandbox/test_cluster/: Makefile  petsc.lua  serial.lua  testg.lua  trilinos.lua
sandbox/test_csc/: test_csc.lua
src/: Makefile
src/corelib/: Makefile  coordsorter.h  element.cc  element.h  fieldeval.cc  fieldeval.h  gaussquad.h  hiqlab.h  hiqlab.h.in  luasupport.cc  luasupport.h  mesh.cc  mesh.h  qassembly.cc  qassembly.h  qcomplex.h  qmatrix.h  shapes.cc  shapes.h
src/doc/: Makefile  hiq-arch.tex  manual.tex  pmanual.tex
src/element/: Makefile  couple_em2d.cc  couple_em2d.h  couple_em2d.tex  elastic2d.cc  elastic2d.h  foo.awk  material_model.cc  material_model.h  model_circuit.cc  model_circuit.h  pmlelastic2d.cc  pmlelastic2d.h  pmlelastic2d1.cc  pmlelastic2d_pz.cc  pmlelastic2d_pz.h  pmlelastic2d_te.cc  pmlelastic2d_te.h  pmlelastic2hd_pz.cc  pmlelastic2hd_pz.h  pmlelastic3d.cc  pmlelastic3d.h  pmlelastic3d_pz.cc  pmlelastic3d_pz.h  pmlelastic3d_te.cc  pmlelastic3d_te.h  pmlelasticax.cc  pmlelasticax.h  pmlelasticax_te.cc  pmlelasticax_te.h  pmlelastictax.cc  pmlelastictax.h  pmlelement.cc  pmlelement.h  pmlfunc.cc  pmlfunc.h  pmlscalar1d.cc  pmlscalar1d.h  pmlscalar2d.cc  pmlscalar2d.h  (+8 more)
src/io/: Makefile  dxfile.cc  dxfile.h
src/lua/: Makefile  cscmatrix.pkg  dirstuff.cc  dirstuff.h  dxfile.pkg  element.pkg  elementslot.lua  hiqlab.cc  leigs.cc  leigs.h  leigs.pkg  material_model.pkg  mesh_m4.pkg  meshbc.lua  meshbuilders.lua  meshscale.lua  pmlmode.pkg  pzlinear.pkg  qarray.cc  qarray.h  qarray.pkg  qassembly.pkg  qhelpers.pkg  qiarray.cc  qiarray.h  qiarray.pkg  qlapack.cc  qlapack.h  qlapack.pkg  saconfig.cc  shapes.pkg  tedlinear.pkg  test.pkg
src/mex/: Makefile  element.mw  luamatlab.cc  luamatlab.h  luamatlab.mw  luamex.pkg  main.mw  mesh.mw  meshbuild.mw  meshstubs.cc  meshstubs.h  mexutil.cc  mexutil.h  octquote.pl  pzlinear.mw  sparse.mw  tedlinear.mw  tmp.sh
src/mfiles/: Mesh_assemble_mk_nd.m  Mesh_assemble_mkc_nd.m  Mesh_matscale.m  compute_bode_mech.m  emcmode.m  emmode.m  equiv_LRCC.m  forced_state.m  hiqaddpath.m  hiqpath.m  mechmode.m  plot_bode.m  plot_mode.m  plotcycle1d.m  plotelt2d.m  plotfield1d.m  plotmesh.m  plotmesh1d.m  plotmesh_bode.m  pml_mode.m  pzmode.m  pzmode_matlab.m  pzmode_mech.m  qlu.m  qoptdefault.m  rom_arnoldi.m  rom_arnoldi_ted.m  rom_soar.m  second_order_bode.m  spdiag.m  static_state.m  tedmode.m
src/numeric/: Makefile  areigs.cc  areigs.h  arinfo.cc  bcoordmatrix.cc  bcoordmatrix.h  coordmatrix.cc  coordmatrix.h  cscassembly.cc  cscassembly.h  cscindexer.cc  cscindexer.h  cscmatrix.cc  cscmatrix.h  mesh_csc_dR.cc  mesh_csc_dR.h  meshlabeler.cc  meshlabeler.h  pmlmode.cc  pmlmode.h  (+8 more)
test/: Makefile  beammesh.lua  test_all.m  test_leigs.lua  test_luaio.m  test_luamatlab.lua  test_luamatlab.m  test_qarray.lua
tools/: MANIFEST  Makefile
(+838 files in other folders)
